--- a/index.html
+++ b/index.html
@@ -8,22 +8,38 @@
     <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
+<header class="header">
+    Premium
+    Ayuda
+    Descargar
+    Registrarse
+    Iniciar sesión
+</header>
 
+    <section>
+        <h1 class="title">Prueba Premium gratis 3 meses</h1>
+        Escucha millones de canciones sin anuncios, a la carta y sin conexión.
+        VER PLANES
+        <p class="condiciones">Rigen términos y condiciones. Los tres meses gratis no están disponibles para usuarios que ya hayan probado Premium.</p>
+    </section>
 
+    <section class="cajitas">
+        ¿Por qué pasarte a Premium?
+        Descarga música.
+        Llévala siempre contigo.
+        Escucha lo que quieras.
+        Incluso en el móvil.
+        Salta todas las canciones que quieras.
+        Simplemente dale a siguiente.
+    </section>
 
-    ¿Por qué pasarte a Premium?
-    Descarga música.
-    Llévala siempre contigo.
-
-
-    Escucha lo que quieras
-    quieras
-    Incluso en el móvil.
-
- 
-
-
-
+    <footer>
+        Legal
+        Cookies
+        Información sobre los anuncios
+        España
+        © 2019 Spotify AB
+    </footer>
 
 </body>
 </html>
